Readded the mass schedules section on the main page, and added Advent schedules.
Because analytics dictates that people just browse the main page often, and less of the actual subsections of the site.

--- a/Home/index.html
+++ b/Home/index.html
@@ -37,6 +37,61 @@ icon: /images/image-01a.jpg
     {% include comp-carousel.html %}
 </div>
 
+<div class="container">
+    <h2 id="schedules">Mass Schedules</h2>
+    <div class="col-xs-6">
+            <h3>Weekday Masses</h3>
+            <ul>
+                <li>Weekday Masses at 6:15 am (Monday to Saturday)</li>
+                <li>Wednesday at 6:00 pm</li>
+                <li>First Friday at 6:00 pm</li>
+                </ul>
+            <h3>Weekend Masses</h3>
+            <ul>
+                <li>Saturday Anticipated Mass at 6:00 pm (English)</li>
+                <li>Sunday Masses</li>
+                <li>6:30 am (Tagalog)</li>
+                <li>8:00 am (Tagalog)</li>
+                <li>9:30 am (English)</li>
+                <li>5:00 pm (Tagalog)</li>
+                <li>6:30 pm (English)</li>
+            </ul>
+    </div>
+
+    <div class="col-xs-6">
+    <h2 id="schedules-special">Advent Masses' Schedule</h2>
+
+    <h3>Simbang Gabi sa Transfi</h3>
+    <ul>
+        <li>15-23 December 2014 (8:30 pm)</li>
+        <li>16-24 December 2014 (4:30 am)</li>
+    </ul>
+
+    <h3>Christmas Eve Mass</h3>
+    Christmas Eve Mass will be held at 11:00 pm.
+
+    <h3>Christmas Day Masses </h3>
+    <ul>
+        <li>8:00 am</li>
+        <li>9:30 am</li>
+        <li>5:00 pm</li>
+        <li>6:30 pm</li>
+    </ul>
+
+    <h3>New Year's Eve Mass</h3>
+    New Year's Eve Mass will be held at 9:00 pm.
+
+    <h3>New Year's Day Mass</h3>
+    <ul>
+        <li>8:00 am</li>
+        <li>9:30 am</li>
+        <li>5:00 pm</li>
+        <li>6:30 pm</li>
+    </ul>
+        <a href="/services/">Other masses and events are listed in the Liturgical Services section.</a>
+    </div>
+</div>
+
 <div class="container hidden-md hidden-lg" style="margin-top: 64px; margin-bottom: 64px;">
 
     <h2>Liturgical Services</h2>
@@ -44,40 +99,9 @@ icon: /images/image-01a.jpg
 
 </div>
 
-<div class="container accented hidden-xs hidden-sm" style="margin-top: 64px; margin-bottom: 64px; padding: 24px; border-radius: 10px">
-
-    <a href="#section-2">
-        <div class="col-md-4 text-center">
-            <h2>About the Parish</h2>
-            <p>The Transfiguration of Christ Parish is relatively a new parish in the Diocese of Antipolo...</p>
-            <p>Click here to scroll down and read more.</p>
-        </div>
-    </a>
-
-    <a href="/services/">
-    <div class="col-md-4 text-center">
-        <h2>Mass Schedules and Liturgical Services</h2>
-        <p>The Parish regularly holds the sacraments, blessings and devotions by schedule, by occasion and upon reservation. Click here to know more about the sacraments and schedules.</p>
-        <p>Forms for various sacraments and blessings are also available for download.</p>
-    </div>
-    </a>
-
-    <a href="http://www.facebook.com/ourtransfi">
-    <div class="col-md-4 text-center">
-        <h2>Upcoming Events</h2>
-        <p>The official page of the Transfiguration of Christ Parish holds announcements towards upcoming and ongoing events in the community.</p>
-        <p>Click here to visit the page in Facebook.</p>
-    </div>
-    </a>
-
-
-
     <!--<div class="col-sm-12 col-md-6 col-md-offset-3">-->
     <!--{% include event-highlight.html %}-->
     <!--</div>-->
-
-
-</div>
 
 <div class="container-fluid">
     <div class="col-xs-6 col-md-3">
