--- a/Home/index.html
+++ b/Home/index.html
@@ -38,7 +38,7 @@ icon: /images/image-01a.jpg
 </div>
 
 <div class="container">
-    <h2 id="schedules">Mass Schedules</h2>
+    <h2 id="schedules">Mass Schedules and Advent</h2>
     <div class="col-xs-6">
             <h3>Weekday Masses</h3>
             <ul>
@@ -59,8 +59,6 @@ icon: /images/image-01a.jpg
     </div>
 
     <div class="col-xs-6">
-    <h2 id="schedules-special">Advent Masses' Schedule</h2>
-
     <h3>Simbang Gabi sa Transfi</h3>
     <ul>
         <li>15-23 December 2014 (8:30 pm)</li>
