Added the 360° tour, added links to BrideWorthy and a navigation link.

--- a/Home/pages/tour/index.html
+++ b/Home/pages/tour/index.html
@@ -2,9 +2,9 @@
 layout: default
 
 title: Parish Tour
-description: View the Parish in 360 degrees!
-subtext: View the Parish in 360 degrees!
-style: "background-color: orange"
+description: Take a tour around the Parish, online!
+subtext: Take a tour around the Parish, online!
+style: "background-color: rgb(100,50,50)"
 permalink: /tour/
 
 ---
@@ -14,12 +14,13 @@ permalink: /tour/
 
 <div class="container" style="padding-bottom: 32px">
     <div class="col-sm-12" style="padding-bottom: 32px">
-        Navigate:
+        Other Panoramas: &nbsp;
             <a href="#" class="btn btn-default" id="pano-1">Parish Grounds 1</a>
             <a href="#" class="btn btn-default" id="pano-2">Parish Grounds 2</a>
             <a href="#" class="btn btn-default" id="pano-3">Outside</a>
             <a href="#" class="btn btn-default" id="pano-4">Inside</a>
             <a href="#" class="btn btn-default" id="pano-5">Columbarium</a>
+            <a href="http://www.brideworthy.com/churches/transfiguration-of-christ-parish?vtour=1" class="btn btn-primary" id="pano-external">BrideWorthy.com</a>
     </div>
 
 
