--- a/Home/index.html
+++ b/Home/index.html
@@ -39,7 +39,7 @@ icon: /images/image-01a.jpg
 
 <div class="container">
     <h2 id="schedules">Mass Schedules and Advent</h2>
-    <div class="col-xs-6">
+    <div class="col-xs-12 col-md-6">
             <h3>Weekday Masses</h3>
             <ul>
                 <li>Weekday Masses at 6:15 am (Monday to Saturday)</li>
@@ -58,7 +58,7 @@ icon: /images/image-01a.jpg
             </ul>
     </div>
 
-    <div class="col-xs-6">
+    <div class="col-md-6 col-xs-12">
     <h3>Simbang Gabi sa Transfi</h3>
     <ul>
         <li>15-23 December 2014 (8:00 pm)</li>
