Fixed incorrect heading for Sunday masses.
I can't believe no one has pointed this out.

--- a/Home/index.html
+++ b/Home/index.html
@@ -49,7 +49,9 @@ icon: /images/image-01a.jpg
             <h3>Weekend Masses</h3>
             <ul>
                 <li>Saturday Anticipated Mass at 6:00 pm (English)</li>
-                <li>Sunday Masses</li>
+            </ul>
+            <h3>Sunday Masses</h3>
+            <ul>
                 <li>6:30 am (Tagalog)</li>
                 <li>8:00 am (Tagalog)</li>
                 <li>9:30 am (English)</li>
