--- a/Home/index.html
+++ b/Home/index.html
@@ -38,7 +38,7 @@ icon: /images/image-01a.jpg
 </div>
 
 <div class="container">
-    <h2 id="schedules">Mass Schedules and Advent</h2>
+    <h2 id="schedules">Mass and Advent Schedules</h2>
     <div class="col-xs-12 col-md-6">
             <h3>Weekday Masses</h3>
             <ul>
