--- a/Home/index.html
+++ b/Home/index.html
@@ -38,7 +38,7 @@ icon: /images/image-01a.jpg
 </div>
 
 <div class="container">
-    <h2 id="schedules">Mass and Advent Schedules</h2>
+    <h2 id="schedules">Mass Schedules</h2>
     <div class="col-xs-12 col-md-6">
             <h3>Weekday Masses</h3>
             <ul>
@@ -50,45 +50,16 @@ icon: /images/image-01a.jpg
             <ul>
                 <li>Saturday Anticipated Mass at 6:00 pm (English)</li>
             </ul>
-            <h3>Sunday Masses</h3>
-            <ul>
-                <li>6:30 am (Tagalog)</li>
-                <li>8:00 am (Tagalog)</li>
-                <li>9:30 am (English)</li>
-                <li>5:00 pm (Tagalog)</li>
-                <li>6:30 pm (English)</li>
-            </ul>
     </div>
-
-    <div class="col-md-6 col-xs-12">
-    <h3>Simbang Gabi sa Transfi</h3>
-    <ul>
-        <li>15-23 December 2014 (8:30 pm)</li>
-        <li>16-24 December 2014 (4:30 am)</li>
-    </ul>
-
-    <h3>Christmas Eve Mass</h3>
-    Christmas Eve Mass will be held at 10:00 pm.
-
-    <h3>Christmas Day Masses </h3>
-    <ul>
-        <li>8:00 am</li>
-        <li>9:30 am</li>
-        <li>5:00 pm</li>
-        <li>6:30 pm</li>
-    </ul>
-
-    <h3>New Year's Eve Mass</h3>
-    New Year's Eve Mass will be held at 9:00 pm.
-
-    <h3>New Year's Day Mass</h3>
-    <ul>
-        <li>8:00 am</li>
-        <li>9:30 am</li>
-        <li>5:00 pm</li>
-        <li>6:30 pm</li>
-    </ul>
-        <a href="/services/">Other masses and events are listed in the Liturgical Services section.</a>
+    <div class="col-xs-12 col-md-6">
+        <h3>Sunday Masses</h3>
+        <ul>
+            <li>6:30 am (Tagalog)</li>
+            <li>8:00 am (Tagalog)</li>
+            <li>9:30 am (English)</li>
+            <li>5:00 pm (Tagalog)</li>
+            <li>6:30 pm (English)</li>
+        </ul>
     </div>
 </div>
 
