Updated the Lent season site to a new url (/lent) and with 2016 schedules.

--- a/Home/pages/lent-2015.html
+++ b/Home/pages/lent-2015.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 
-title: Lent 2015
-description: A list of all the events and dates during Lent in the Transfiguration of Christ Parish.
+title: Lent and Easter 2016
+description: A list of all the events and dates during Lent and Easter in the Transfiguration of Christ Parish.
 subtext: Program of Activities
 style: "background-color: purple"
-css: lent2015.css
-permalink: /lent2015/
+css: lent.css
+permalink: /lent/
 
 ---
 
@@ -15,110 +15,84 @@ permalink: /lent2015/
         <h1>Schedule of Events</h1>
 
         <br />The following are the events that will be held during the Lenten season.
-        <br />If you want to have a personal copy through your phone, tablet or Google Calendar, click here (coming soon!)
 
         <h2>Lent</h2>
 
-        <p><span class="sched-date">February 18 (Wednesday)</span>
+        <p><span class="sched-date">February 11 (Wednesday)</span>
         <br /><span class="sched-title">Ash Wednesday (Day of Fasting and Abstinence)</span>
         <br /> Masses & Imposition of Ashes
         <br /> 6:15 am / 6:00 pm
+        <br /> 7:30 pm - Vista Mall
 
-        <p><span class="sched-date">February 20 (Friday)</span>
-        <br /><span class="sched-title">Way of the Cross (Our Lady of Lourdes Cluster)</span>
-        <br /> 7:00 pm
+        <p><span class="sched-date">February 16 (Tuesday)</span>
+        <br /><span class="sched-title">Kumpisalang Bayan (Parish Church)</span>
+        <br /> 7:00 pm to 9:30 pm
 
-        <p><span class="sched-date">February 20-22 (Friday to Sunday)</span>
-        <br /><span class="sched-title">Lenten Exhibit (Parish Church)</span>
+        <p><span class="sched-date">February 19 (Friday)</span>
+        <br /><span class="sched-title">Way of the Cross (Aba Homes)</span>
+        <br /> 6:00 pm
 
-        <p><span class="sched-date">February 27 (Friday)</span>
-        <br /><span class="sched-title">Way of the Cross (Our Lady of Fatima Cluster)</span>
-        <br /> 7:00 pm
+        <p><span class="sched-date">February 26 (Friday)</span>
+        <br /><span class="sched-title">Way of the Cross (Maia Alta Subdivision)</span>
+        <br /> 6:00 pm
 
-        <p><span class="sched-date">February 28 (Saturday)</span>
-        <br /><span class="sched-title">“Aral-Kuwaresma” Part 1 (Parish Formation on Lent/Easter)</span>
-        <br /> Pope Francis Pastoral Center
-        <br /> 8:30 am
+        <p><span class="sched-date">March 4 (Friday)</span>
+        <br /><span class="sched-title">Way of the Cross (Gloria Heights Subdivision)</span>
+        <br /> 6:00 pm
 
-        <p><span class="sched-date">March 6 (Friday)</span>
-        <br /><span class="sched-title">Way of the Cross (Our Lady of Aranzazu Cluster)</span>
-        <br /> 7:00 pm
+        <p><span class="sched-date">March 11 (Friday)</span>
+        <br /><span class="sched-title">Way of the Cross (Nayong Silangan / Banaba Court)</span>
+        <br /> 6:00 pm
 
-        <p><span class="sched-date">March 7 (Saturday)</span>
-        <br /><span class="sched-title">“Aral-Kuwaresma” Part 2 (Parish Formation on Lent/Easter)</span>
-        <br /> Pope Francis Pastoral Center
-        <br /> 8:30 am
-
-        <p><span class="sched-date">March 13 (Friday)</span>
-        <br /><span class="sched-title">Way of the Cross (Our Lady of the Abandoned Cluster)</span>
-        <br /> 7:00 pm
-
-        <p><span class="sched-date">March 14 (Saturday)</span>
-        <br /><span class="sched-title">“Visita Iglesia ng Transfi”</span>
+        <p><span class="sched-date">March 12 (Saturday)</span>
+        <br /><span class="sched-title">“Visita Iglesia sa Quezon”</span>
         <br /> 5:00 am (Departure Time)
 
-        <p><span class="sched-date">March 16 (Monday)</span>
-        <br /><span class="sched-title">“Kumpisalang Bayan” (Parish Church)</span>
-        <br /> 6:30 pm to 9:30 pm
-        <p><span class="sched-date">March 20 (Friday)</span>
-        <br /><span class="sched-title">Way of the Cross (Our Lady of Light Cluster)</span>
-        <br /> 7:00 pm
+        <p><span class="sched-date">March 18 (Friday)</span>
+        <br /><span class="sched-title">Way of the Cross (Lores Subdivision)</span>
+        <br /> 6:00 pm
 
-        <p><span class="sched-date">March 21 (Saturday)</span>
-        <br /><span class="sched-title">Lenten Recollection 1 (Pope Francis Pastoral Center)</span>
-        <br /> 7:30 pm
-
-        <p><span class="sched-date">March 27 (Friday)</span>
-        <br /><span class="sched-title">Way of the Cross (Immaculate Conception Cluster)</span>
-        <br /> 7:00 pm
-
-        <p><span class="sched-date">March 28 (Saturday)</span>
-        <br /><span class="sched-title">Lenten Recollection 2 (Pope Francis Pastoral Center)</span>
+        <p><span class="sched-date">March 19 (Saturday)</span>
+        <br /><span class="sched-title">Lenten Recollection (Parish Church)</span>
         <br /> 7:30 pm
 
         <h2>Holy Week</h2>
 
-        <p><span class="sched-date">March 29 (Passion Sunday)</span>
+        <p><span class="sched-date">March 20 (Passion Sunday)</span>
         <br /><span class="sched-title">Blessing of Palms (Woodrow Hills Rotonda)</span>
         <br /> 5:00 am
         <br /><span class="sched-title">Procession of Palms</span>
         <br /> 5:30 am
-        <br /><span class="sched-title">Masses (Parish Church)</span>
+        <br /><span class="sched-title">Masses (Parish Church only)</span>
         <br /> 6:30 am / 8:00 am / 9:30 am / 5:00 pm / 6:30 pm
         <br /> Note: No Masses in all chapels on Passion Sunday
 
-        <p><span class="sched-date">March 30 (Holy Monday)</span>
+        <p><span class="sched-date">March 21 (Holy Monday)</span>
         <br /><span class="sched-title">“Pabasa sa Transfi” (Pope Francis Pastoral Center)</span>
         <br /> 8:00 am
 
-        <p><span class="sched-date">March 31 to April 1 (Holy Tuesday & Holy Wednesday)</span>
+        <p><span class="sched-date">March 22 to 23 (Holy Tuesday & Holy Wednesday)</span>
         <br /><span class="sched-title">Different Lenten activities in parish clusters/MSK areas</span>
 
-        <p><span class="sched-date">April 2 (Holy Thursday)</span>
+        <p><span class="sched-date">March 24 (Holy Thursday)</span>
         <br /><span class="sched-title">Chrism Mass (Antipolo Cathedral)</span>
         <br /> 6:00 am
         <br /><span class="sched-title">Mass of the Lord’s Supper (Parish Church)</span>
-        <br /> 4:30 pm
+        <br /> 3:30 pm
         <br /><span class="sched-title">Transfer of the Blessed Sacrament</span>
         <br /> 5:30 pm
         <br /><span class="sched-title">Vigil to the Blessed Sacrament</span>
         <br /> 6:00 pm to 12:00 midnight only
-        <br /> Note: 	No prayers of the Way of the Cross inside the church. The Way of the Cross can be done at the church patio.
 
-
-        <p><span class="sched-date">April 3 (Good Friday)</span>
-        <br /><span class="sched-title">Way of the Cross (Parish Church)</span>
-        <br /> 9:00 am
-        <br /><span class="sched-title">Good Friday Service/Veneration of the Cross</span>
+        <p><span class="sched-date">March 25 (Good Friday)</span>
+        <br /><span class="sched-title">Good Friday Service / Veneration of the Cross</span>
         <br /> 3:00 pm
-        <br /><span class="sched-title">Catechism on the Good Friday Procession (Parish Church)</span>
+        <br /><span class="sched-title">Catechism on the Good Friday Procession</span>
         <br /> 4:30 pm
         <br /><span class="sched-title">Procession</span>
         <br /> 5:00 pm
 
-        <p><span class="sched-date">April 4 (Holy Saturday)</span>
-        <br /><span class="sched-title">“Bayanihan sa Parokya”</span>
-        <br /> 8:00 am
+        <p><span class="sched-date">March 26 (Holy Saturday)</span>
         <br /><span class="sched-title">Easter Vigil Mass</span>
         <br /> 9:00 pm
         <br /><span class="sched-title">“Salubong”</span>
@@ -126,17 +100,17 @@ permalink: /lent2015/
 
         <h2>Easter</h2>
 
-        <p><span class="sched-date">April 5 (Easter Sunday)</span>
+        <p><span class="sched-date">March 27 (Easter Sunday)</span>
         <br /><span class="sched-title">Masses (Parish Church)</span>
         <br /> 6:30 am / 8:00 am / 9:30 am / 5:00 pm / 6:30 pm
         <br /> Note: Regular Masses in chapels
 
-        <p><span class="sched-date">April 6 to 11 (Easter Monday to Easter Saturday)</span>
+        <p><span class="sched-date">March 28 to April 2 (Easter Monday to Easter Saturday)</span>
         <br /><span class="sched-title">Easter Octave Masses</span>
         <br /> 6:15 am (6:00 pm on Wednesday)
 
-        <p><span class="sched-date">April 12 (Divine Mercy Sunday)</span>
-        <br /><span class="sched-title">Mass</span>
+        <p><span class="sched-date">April 3 (Divine Mercy Sunday)</span>
+        <br /><span class="sched-title">Mass (Ferretville)</span>
         <br /> 4:00 pm
         <br /><span class="sched-title">Procession</span>
         <br /> 5:00 pm
