--- a/Home/pages/lent.html
+++ b/Home/pages/lent.html
@@ -3,7 +3,7 @@ layout: default
 
 title: Lent and Easter 2016
 description: A list of all the events and dates during Lent and Easter in the Transfiguration of Christ Parish.
-subtext: Program of Activities
+subtext: Schedule of Events during Lent and Easter
 style: "background-color: purple"
 css: lent.css
 permalink: /lent/
@@ -12,10 +12,7 @@ permalink: /lent/
 
 <div class="container" style="padding-bottom: 32px">
     <div id="schedule" class="col-sm-12 col-md-8 col-md-offset-2">
-        <h1>Schedule of Events</h1>
-
-        <br />The following are the events that will be held during the Lenten season.
-
+        
         <h2>Lent</h2>
 
         <p><span class="sched-date">February 10 (Wednesday)</span>
