Added a link to the Lent and Easter page in the home page.

--- a/Home/index.html
+++ b/Home/index.html
@@ -39,6 +39,10 @@ icon: /images/image-01a.jpg
 
 <div class="container">
     <h2 id="schedules">Mass Schedules</h2>
+    <div class="col-xs-12">
+        <h3>Lent Schedule</h3>
+        <a href="/lent">Click here for the schedule for the Lent and Easter season.</a>
+    </div>
     <div class="col-xs-12 col-md-6">
             <h3>Weekday Masses</h3>
             <ul>
