Added event details on the Visita Iglesia.

--- a/Home/pages/lent.html
+++ b/Home/pages/lent.html
@@ -43,7 +43,16 @@ permalink: /lent/
 
         <p><span class="sched-date">March 12 (Saturday)</span>
         <br /><span class="sched-title">“Visita Iglesia sa Quezon”</span>
+        <ul>
+            <li>St. Louis Bishop Church, Lucban</li>
+            <li>Kamay ni Hesus, Lucban</li>
+            <li>St. Michael Basilica, Tayabas</li>
+            <li>St. Ferdinand Cathedral, Lucena City </li>
+            <li>Healing Mass at "Kamay ni Hesus" to be officiated by Fr. Joey Faller</li>
+        </ul>
+        <br /> Transportation cost (aircon bus): Php 500/head
         <br /> 5:00 am (Departure Time)
+        
 
         <p><span class="sched-date">March 18 (Friday)</span>
         <br /><span class="sched-title">Way of the Cross (Lores Subdivision)</span>
