Removed Facebook message hint, added email contact.
As of June 22, 2016, the Facebook messaging for the Parish has been closed due to diverging communications between the actual office operations and the expected details listed on the page. Various issues cannot be handled by the page itself (i.e., phone issues at the office) and nearly every message to the Parish has been forwarded either through email or the phone.

--- a/Home/index.html
+++ b/Home/index.html
@@ -197,10 +197,7 @@ icon: /images/image-01a.jpg
 
         <p>For general inquiries and concerns, contact us via our telephone number (available every day, except Monday):
             <br/><span style="font-weight: bold">{{ site.contact }}</span>
-            <br/>You can also contact us by leaving a message on our Facebook page.</p>
-
-        <a class="btn btn-primary" role="button"
-           href="http://www.facebook.com/ourtransfi">facebook.com/ourtransfi</a>
+            <br/>You can also contact us by sending an email to the Parish Office (<a href="mailto:transfi.office121212@yahoo.com">transfi.office121212@yahoo.com</a>)</p>
 
         <p>Please take note that various liturgical services, such as <a href="/services/#baptism">baptismal rites</a> and <a href="/services/#matrimony-weddings">weddings</a> are all detailed further in the <a href="/services/">Liturgical Services</a> page. </p>
 
@@ -209,6 +206,10 @@ icon: /images/image-01a.jpg
         <p>The Transfiguration of Christ Parish is located at the <strong>M.L. Quezon St. Ext. in Antipolo
             City, Rizal.</strong> For convenience, refer to the Google Map on the right, or click the button
             below to view it in Google Maps.</p>
+            
+        <a class="btn btn-primary" role="button"
+           href="http://www.facebook.com/ourtransfi">Like us on Facebook! @ourtransfi</a>
+           
         <a class="btn btn-default" role="button"
            href="https://www.google.com.ph/maps/place/Transfiguration+Of+Christ+Parish/@{{ site.address_latitude }} , {{ site.address_longitude }},18z/data=!4m2!3m1!1s0x3397c0b9c5cadb3f:0x55deeaf5184b2631?hl=en">Navigate
             via Google Maps</a>
