Added changes to the schedule
Lenten Recollection schedule swapped with a Way of the Cross day.

--- a/Home/pages/lent.html
+++ b/Home/pages/lent.html
@@ -66,9 +66,9 @@ permalink: /lent/
         <br /><span class="sched-title">Way of the Cross (Mia Vita Subdivision)</span>
         <br /> 6:00 pm
             
-        <p><span class="sched-date">April 7 (Friday)</span>
-        <br /><span class="sched-title">Way of the Cross (Woodrow Subdivision)</span>
-        <br /> 6:00 pm
+        <p><span class="sched-date">April 6 (Thursday)</span>
+        <br /><span class="sched-title">Lenten Recollection (Parish Church)</span>
+        <br /> 7:00 pm
 
         <h2>Holy Week</h2>
 
@@ -82,8 +82,8 @@ permalink: /lent/
 
         <p><span class="sched-date">April 11 (Holy Tuesday)</span>
         <br /><span class="sched-title">Different Lenten activities in parish</span>
-        <br /><span class="sched-title">Lenten Recollection (Parish Church)</span>
-        <br /> 7:30 pm
+        <br /><span class="sched-title">Way of the Cross (Pines City Executive Subdivision)</span>
+        <br /> 6:00 pm
             
         <p><span class="sched-date">April 12 (Holy Wednesday)</span>
         <br /><span class="sched-title">Different Lenten activities in parish</span>
