--- a/Home/index.html
+++ b/Home/index.html
@@ -44,7 +44,6 @@ icon: /images/image-01a.jpg
             <ul>
                 <li>Weekday Masses at 6:15 am (Monday to Saturday)</li>
                 <li>Wednesday at 6:00 pm</li>
-                <li>First Friday at 6:00 pm</li>
                 </ul>
             <h3>Weekend Masses</h3>
             <ul>
@@ -57,6 +56,7 @@ icon: /images/image-01a.jpg
             <li>6:30 am (Tagalog)</li>
             <li>8:00 am (Tagalog)</li>
             <li>9:30 am (English)</li>
+            <li>11:00 am (Tagalog)</li>
             <li>5:00 pm (Tagalog)</li>
             <li>6:30 pm (English)</li>
         </ul>
