Changed the 11AM mass to English.

--- a/Home/index.html
+++ b/Home/index.html
@@ -56,7 +56,7 @@ icon: /images/image-01a.jpg
             <li>6:30 am (Tagalog)</li>
             <li>8:00 am (Tagalog)</li>
             <li>9:30 am (English)</li>
-            <li>11:00 am (Tagalog)</li>
+            <li>11:00 am (English)</li>
             <li>5:00 pm (Tagalog)</li>
             <li>6:30 pm (English)</li>
         </ul>
