Mass schedules updated (2021-11-30)

--- a/Home/index.html
+++ b/Home/index.html
@@ -42,23 +42,16 @@ icon: /images/image-01a.jpg
     <div class="col-xs-12 col-md-6">
             <h3>Weekday Masses</h3>
             <ul>
-                <li>Weekday Masses at 6:15 am (Monday to Saturday)</li>
-                <li>Wednesday at 6:00 pm</li>
-                </ul>
-            <h3>Weekend Masses</h3>
-            <ul>
-                <li>Saturday Anticipated Mass at 6:00 pm (English)</li>
+                <li>Wednesday at 6:15 am</li>
+                <li>Friday at 6:15 am</li>
             </ul>
     </div>
     <div class="col-xs-12 col-md-6">
         <h3>Sunday Masses</h3>
         <ul>
-            <li>6:30 am (Tagalog)</li>
-            <li>8:00 am (Tagalog)</li>
-            <li>9:30 am (English)</li>
-            <li>11:00 am (English)</li>
-            <li>5:00 pm (Tagalog)</li>
-            <li>6:30 pm (English)</li>
+            <li>8:30 am</li>
+            <li>10:30 am</li>
+            <li>5:00 pm</li>
         </ul>
     </div>
 </div>
